--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./server/bin/www"
+    "start": "nodemon ./server/bin/www"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -13,5 +13,8 @@
     "mongodb": "^2.2.30",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
