--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "idea-ranking",
+  "name": "Ranker",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./server/bin/www"
+    "start": "node ./server/bin/www",
+    "build": "webpack",
+    "lint": "./node_modules/.bin/eslint webapp/src"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -12,6 +14,22 @@
     "express": "~4.15.2",
     "mongodb": "^2.2.30",
     "morgan": "~1.8.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.2",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.1.0",
+    "html-webpack-plugin": "^2.29.0",
+    "webpack": "^3.3.0"
   }
 }
