--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./server/bin/www",
-    "serve": "webpack-dev-server --config conf/webpack.config.dev.js --open",
-    "build": "webpack --config conf/webpack.config.prod.js",
+    "serve": "webpack-dev-server --config conf/webpack.dev.js --open",
+    "build": "webpack --config conf/webpack.prod.js -p",
     "lint": "./node_modules/.bin/eslint webapp/src"
   },
   "dependencies": {
@@ -24,6 +24,7 @@
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.16",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.2",
     "eslint-loader": "^1.9.0",
