--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./server/bin/www",
-    "serve": "webpack-dev-server --config conf/webpack.dev.js --open",
+    "serve": "concurrently -k \"npm run --silent start\" \"npm run serve:web\"",
+    "serve:web": "webpack-dev-server --config conf/webpack.dev.js --open",
     "build": "webpack --config conf/webpack.prod.js -p",
     "lint": "./node_modules/.bin/eslint webapp/src"
   },
@@ -25,6 +26,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.16",
+    "concurrently": "^3.5.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.2",
     "eslint-loader": "^1.9.0",
