--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "serve": "concurrently -k \"npm run --silent start\" \"npm run serve:web\"",
     "serve:web": "webpack-dev-server --config conf/webpack.dev.js --open",
     "build": "webpack --config conf/webpack.prod.js -p",
-    "lint": "./node_modules/.bin/eslint webapp/src"
+    "lint": "./node_modules/.bin/eslint webapp/src",
+    "test": "npm run lint"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
