Fix environmental variable and error handling

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "DB_URL=mongodb://localhost:27017/rankerdb nodemon ./server/bin/www"
+    "start": "nodemon ./server/bin/www"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
