--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "~4.15.2",
     "mongodb": "^2.2.30",
     "morgan": "~1.8.1",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.2",
@@ -26,7 +27,7 @@
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.16",
     "concurrently": "^3.5.0",
