--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./server/bin/www"
+    "start": "nodemon ./server/bin/www",
+    "test": "mocha ./server/tests"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -12,9 +13,12 @@
     "express": "~4.15.2",
     "mongodb": "^2.2.30",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "sinon": "^2.4.1"
   },
   "devDependencies": {
+    "chai": "^4.1.0",
+    "mocha": "^3.4.2",
     "nodemon": "^1.11.0"
   }
 }
