--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "express": "~4.15.2",
     "mongodb": "^2.2.30",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2",
-    "sinon": "^2.4.1"
+    "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
     "chai": "^4.1.0",
     "mocha": "^3.4.2",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "sinon": "^2.4.1"
   }
 }
