--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "chai": "^4.1.0",
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
-    "sinon": "^2.4.1"
+    "sinon": "^2.4.1",
     
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
