--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./server/bin/www",
+    "start": "nodemon ./server/bin/www",
+    "test": "mocha ./server/tests && npm run lint",
     "serve": "concurrently -k \"npm run --silent start\" \"npm run serve:web\"",
     "serve:web": "webpack-dev-server --config conf/webpack.dev.js --open",
     "build": "webpack --config conf/webpack.prod.js -p",
-    "lint": "./node_modules/.bin/eslint webapp/src",
-    "test": "npm run lint"
+    "lint": "./node_modules/.bin/eslint webapp/src"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -24,6 +24,11 @@
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
+    "chai": "^4.1.0",
+    "mocha": "^3.4.2",
+    "nodemon": "^1.11.0",
+    "sinon": "^2.4.1",
+    
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
