--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./server/bin/www",
+    "start": "nodemon --watch server ./server/bin/www",
     "test": "mocha ./server/tests && npm run lint",
     "serve": "concurrently -k \"npm run --silent start\" \"npm run serve:web\"",
-    "serve:web": "webpack-dev-server --config conf/webpack.dev.js --open",
+    "serve:web": "webpack-dev-server --config conf/webpack.dev.js",
     "build": "webpack --config conf/webpack.prod.js -p",
     "lint": "./node_modules/.bin/eslint webapp/src"
   },
@@ -28,7 +28,6 @@
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
     "sinon": "^2.4.1",
-    
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
