--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./server/bin/www",
+    "start": "nodemon --watch server ./server/bin/www",
     "test": "mocha ./server/tests && npm run lint",
     "serve": "concurrently -k \"npm run --silent start\" \"npm run serve:web\"",
-    "serve:web": "webpack-dev-server --config conf/webpack.dev.js --open",
+    "serve:web": "webpack-dev-server --config conf/webpack.dev.js",
     "build": "webpack --config conf/webpack.prod.js -p",
     "lint": "npm run lint:web && npm run lint:server",
     "lint:web": "./node_modules/.bin/eslint webapp/src",
@@ -30,7 +30,7 @@
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
-    "babel-preset-latest": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.0",
     "clean-webpack-plugin": "^0.1.16",
